--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+@import url("../../node_modules/croppr/dist/croppr.min.css");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
